test to demonstrate crbug.com/792881

Bug: 792881
Change-Id: I60e7af88a8d760e79afa57a4c8316a5b9629c230